<resources>
    <string name="app_name">NDR</string>
    <string name="menu">Home</string>

    <string name="ayuda">Ayuda</string>
    <string name="guardar_conf">Ayuda</string>

    <!-- *** Activity Secciones  *** -->
    <string name="secciones">Secciones</string>
    <string name="info_general">Información General</string>
    <string name="antec_medic">Antecedentes y Medicamentos</string>
    <string name="medidas">Medidas</string>
    <string name="pres_art">Presión Arterial</string>
    <string name="laboratorio">Laboratorio</string>


    <!-- *** Activity Información General  *** -->
    <string name="vivienda">Vivienda</string>
    <string name="econ_fmliar">Economía Familiar</string>

    <!-- Fragment Datos Personales -->
    <string name="nombre">Nombre:</string>
    <string name="ap_paterno">Apellito Paterno:</string>
    <string name="ap_materno">Apellito Materno:</string>
    <string name="sexo">Sexo:</string>
    <string name="femenino">Femenino:</string>
    <string name="masculino">Masculino:</string>
    <string name="edad">Edad:</string>
    <string name="fech_nac">Fecha de Nac:</string>
    <string name="telefono">Teléfono:</string>
    <string name="est_civil">Estado Civil:</string>
    <string name="origen">Origen:</string>
    <string name="af_ecuat">Af/Ecuat</string>
    <string name="indi_mest">Indi/Mest</string>

    <!-- *** Login Activity  *** -->
    <string name="hint_correo">Correo</string>
    <string name="hint_usuario">Usuario</string>
    <string name="hint_contrasena">Contraseña</string>
    <string name="btn_entrar">Ingresar</string>
    <string name="acc_entrar">Ingresar</string>
    <string name="error_correo_invalido">Este correo es invalido.</string>
    <string name="error_contrasena_corta">Esta contraseña es muy corta.</string>
    <string name="error_contrasena">Esta contraseña es incorrecta.</string>
    <string name="error_requerido">Campo requerido.</string>

    <!-- *** Labels Menú Principal  *** -->
    <string name="lbl_nuevo">Nueva Encuesta:</string>
    <string name="lbl_configurar">Configuración:</string>
    <string name="lbl_informacion">Información y Contacto:</string>
    <string name="lbl_salir">Salir del Sistema:</string>
    <string name="lbl_sincronizar">Sincronizar Encuestas:</string>
    <string name="lbl_formularios">Formularios:</string>

    <!-- *** Botones Secciones Nuevo Formulario  *** -->
    <string name="btn_inf_general">Información General</string>
    <string name="btn_encuesta">Preparación</string>
    <string name="btn_medidas">Medidas</string>
    <string name="btn_presion">Presión Arterial</string>
    <string name="btn_laboratorio">Laboratorio</string>

    <!-- *** Titulos Dialogs Spinners  *** -->
    <string name="dia_spn_etnia">Selecciona una Etnia:</string>
    <string name="dia_spn_estado">Selecciona un Estado:</string>
    <string name="title_activity_preparacion">Preparacion</string>
    <string name="title_activity_medidas">Medidas</string>
    <string name="title_activity_presion_arterial">Presion Arterial</string>
    <string name="title_activity_laboratorio">Laboratorio</string>


    <string-array name="opcionesEstadoCivil">
        <item>Seleccionar</item>
        <item>Soltero</item>
        <item>Casado</item>
        <item>Divorciado</item>
        <item>Unión Libre</item>
        <item>Viudo</item>
    </string-array>

    <string-array name="opcionesEtnia">
        <item>Seleccionar</item>
        <item>Indigena</item>
        <item>Afroecuatoriano</item>
        <item>Montubia</item>
        <item>Mestiza</item>
        <item>Blanca</item>
    </string-array>

    <string-array name="opcionesOcupacion">
        <item>Seleccionar</item>
        <item>Empleado</item>
        <item>Cuenta Propia</item>
        <item>No Trabaja</item>
        <item>Estudia</item>
        <item>Jubilado</item>
        <item>Ama de Casa</item>
    </string-array>

    <string-array name="opcionesEstudios">
        <item>Seleccionar</item>
        <item>Analfabeto</item>
        <item>Primarios Completos</item>
        <item>Primarios Incompletos</item>
        <item>Secundarios Completos</item>
        <item>Secundarios Incompletos</item>
        <item>Terciarios Completos</item>
        <item>Terciarios Incompletos</item>
        <item>Universitarios Completos</item>
        <item>Universitarios Incompletos</item>
    </string-array>

    <string-array name="opcionesActividadFisica">
        <item>Seleccionar</item>
        <item>No hago actividad física</item>
        <item>Solo hago ejercicios en el tiempo libre</item>
        <item>Hago ejercicios mas de 3 veces por semana</item>
        <item>Hago ejercicios todos los dias</item>
    </string-array>

    <string-array name="opcionesVivienda">
        <item>Seleccionar</item>
        <item>Ciudad</item>opcionesVivienda
        <item>Campo</item>
        <item>Alrededor de la Ciudad</item>
    </string-array>

    <string-array name="opcionesAgua">
        <item>Seleccionar</item>
        <item>Intubada</item>
        <item>Cisterna</item>
        <item>Tanquero</item>
        <item>Tanqueo</item>
    </string-array>
    <string name="title_activity_configuracion">Configuración</string>



    <string name="lbl_descripcion_pro">Esta aplicación se ha desarrollado como parte del proyecto:\n
        DESARROLLO DE HERRAMIENTAS DE BIOMEDICINA PARA EL ESTUDIO DE LA NEFROPATÍA DIABÉTICA EN ECUADOR\n
        de la materia integradora para el proceso de graduación de los estudiantes:\n\n
        - Andrea Torres Rangel (ESPOL)\n
        - Rolando Sornoza Mosquera (ESPOL)\n\n
        y bajo la dirección de los docentes:\n\n
        - Dra. Lorena Carlo Unda (ESPOL)\n
        - Dr. Daniel Ochoa Donoso (ESPOL)\n
        - Dra. Delma Verón (UNEMI)\n
        </string>

    <string name="lbl_conta_1">
        Desarrollador: Rolando Andres Sornoza Mosquera:\nCorreo: rolansor@espol.edu.ec\nTeléfono: 0990464145\n</string>
    <string name="lbl_conta_2">
        Desarrollador: Andrea Ninosca Torres Rangel:\nCorreo: andinator@espol.edu.ec\nTeléfono: 0984912968\n</string>

    <string name="lbl_conta_des">Si necesita soporte técnico por favor sirvase a comunicarse con los desarrolladores:</string>



</resources>
