<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="fiec.ndr.Secciones">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <Button
            android:id="@+id/btn_encuesta"
            android:background="@drawable/btn_azul"
            android:text="@string/btn_encuesta"
            style="@style/btn_style"/>

        <Button
            android:id="@+id/btn_inf_general"
            android:background="@drawable/btn_verde"
            android:text="@string/btn_inf_general"
            style="@style/btn_style"/>

        <Button
            android:id="@+id/btn_medidas"
            android:background="@drawable/btn_morado"
            android:text="@string/btn_medidas"
            style="@style/btn_style"/>

        <Button
            android:id="@+id/btn_presion"
            android:background="@drawable/btn_amarillo"
            android:text="@string/btn_presion"
            style="@style/btn_style"/>

        <Button
            android:id="@+id/btn_laboratorio"
            android:background="@drawable/btn_rojo"
            android:text="@string/btn_laboratorio"
            style="@style/btn_style"/>


    </LinearLayout>
</RelativeLayout>
