<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="fiec.ndr.DatosPersonales">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="left|top">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:text="@string/nombre"
                    android:id="@+id/tv_nombre"
                    android:layout_column="0"
                    android:textStyle="bold"
                    android:textSize="20sp"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/et_nombre"
                    android:inputType="textPersonName"
                    android:layout_column="1" />
            </TableRow>

            <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <TextView
                    android:text="@string/ap_paterno"
                    android:id="@+id/tv_appaterno"
                    android:layout_column="0"
                    android:textStyle="bold"
                    android:textSize="20sp"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/et_appaterno"
                    android:inputType="textPersonName"
                    android:layout_column="1" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:text="@string/ap_materno"
                    android:id="@+id/tv_apmaterno"
                    android:layout_column="0"
                    android:textStyle="bold"
                    android:textSize="20sp"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/et_apmaterno"
                    android:inputType="textPersonName"
                    android:layout_column="1" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:text="@string/sexo"
                    android:id="@+id/tv_sexo"
                    android:layout_column="0"
                    android:textStyle="bold"
                    android:textSize="20sp"/>
                <RadioGroup>
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/femenino"
                        android:id="@+id/radioButton"
                        android:checked="true"
                        android:layout_column="1" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/masculino"
                        android:id="@+id/radioButton2"
                        android:layout_column="2" />
                </RadioGroup>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:text="@string/edad"
                    android:id="@+id/tv_edad"
                    android:layout_column="0"
                    android:textStyle="bold"
                    android:textSize="20sp"/>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/et_edad"
                    android:layout_column="1" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:text="@string/fech_nac"
                    android:id="@+id/tv_fechnac"
                    android:layout_column="0"
                    android:textStyle="bold"
                    android:textSize="20sp"/>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    android:ems="10"
                    android:id="@+id/et_fechnac"
                    android:layout_column="1" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:text="@string/telefono"
                    android:id="@+id/tv_telefono"
                    android:layout_column="0"
                    android:textStyle="bold"
                    android:textSize="20sp"/>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:ems="10"
                    android:id="@+id/et_telefono"
                    android:layout_column="1" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:text="@string/est_civil"
                    android:id="@+id/tv_estcivil"
                    android:layout_column="0"
                    android:textStyle="bold"
                    android:textSize="20sp"/>

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/sp_estcivil"
                    android:layout_column="1" />

            </TableRow>

        </TableLayout>

    </ScrollView>
</RelativeLayout>
